# geozarr-examples

./: .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  README.md  diagram.html  geozarr-eopf-specification.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  search.json  sitemap.xml  slides.html  spec-diagram.html  web-optimized-zarr.html  woz-diagram.html
.github/workflows/: deploy_mkdocs.yaml  quarto-publish.yaml
_site/: index.html  search.json  slides.html
_site/site_libs/bootstrap/: bootstrap-dark.min.css
api/: index.html
cli/: index.html
docs/: _quarto.yml  cli.md  diagram.qmd  faq.md  geozarr-eopf-specification.qmd  getting-started.md  index.md  index.qmd  slides.qmd  spec-diagram.qmd  web-optimized-zarr.qmd  woz-diagram.qmd
docs/api/: index.md
docs/examples/: 00_download_data.ipynb  02_CRS_and_geotransform_in_auxiliary_variable.ipynb  04_multiscales_as_WebMercatorQuad_ZarrV3.ipynb  05_WIP_multiscales_as_customTMS_ZarrV2.ipynb  06_embedded_STAC_block.ipynb  06_multiscales_EOPF_ZarrV3.ipynb  06_multiscales_EOPF_ZarrV3_enhanced.ipynb  06_multiscales_as_WebMercatorQuad_EOPFZarrV3.ipynb  07_cf_coordinate_subsampling.ipynb  cog-to-zarr.ipynb  composition.ipynb  inheritance.ipynb  proj-convention.ipynb  sentinel2-tci-to-geozarr.py
docs/slides/: 2025-02.qmd  2025-04.qmd
examples/: 00_download_data.html  01_CRS_in_auxiliary_variable.html  01_CRS_in_auxiliary_variable.ipynb  02_CRS_and_geotransform_in_auxiliary_variable.html  03_multiscales_as_WebMercatorQuad_ZarrV2.html  03_multiscales_as_WebMercatorQuad_ZarrV2.ipynb  04_multiscales_as_WebMercatorQuad_ZarrV3.html  05_WIP_multiscales_as_customTMS_ZarrV2.html  06_embedded_STAC_block.html  06_multiscales_EOPF_ZarrV3.html  06_multiscales_as_WebMercatorQuad_EOPFZarrV3.html
examples/cog-to-zarr/: cog-to-zarr.ipynb  index.html
examples/composition/: index.html
examples/inheritance/: index.html
examples/proj-convention/: index.html  proj-convention.ipynb
faq/: index.html
getting-started/: index.html
scratch-notebooks/: README.md  flexible-coords-geotiff.ipynb
search/: search_index.json
site_libs/bootstrap/: bootstrap-42b7cbd6e88524df0fde5e770d9fbf72.min.css  bootstrap-4c33a50c55896b3d40e387adf82d8fb0.min.css  bootstrap-dark-3128ad2f564d6d90af293e0d1a3cafe7.min.css  bootstrap-dark-461fb5a96ae0df92b97e9d7fa768a63e.min.css  bootstrap-dark-735c176d809b66711d3f952fd0d77fe7.min.css  bootstrap-dark-9a6bb6ea0608c2899719b8412bfeecbe.min.css
slides/: 2025-02.html  2025-04.html
src/geozarr_examples/: __init__.py  __main__.py  cli.py  cog_multiscales.py
src/geozarr_examples/conventions/: __init__.py  multiscales.py  proj.py  spatial.py
src/geozarr_examples/helpers/: __init__.py  metadata.py  validation.py
tests/: test_cli.py  test_version.py
tests/test_conventions/: __init__.py  test_multiscales.py  test_proj.py  test_spatial.py
tests/test_helpers/: test_metadata.py  test_validation.py
