[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "geozarr-examples"
description = "Simple GeoZarr examples"
authors = [
    {name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "zarr>=3.0.8",
    "pystac-client",
    "xarray",
    "xproj",
    "rioxarray",
    "earthaccess",
    "rio-cogeo",
    "rio-tiler",
    "cf-xarray",
    "cftime",
    "dask",
]
dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
license = {text = "MIT License"}
keywords = ["Python", "compressed", "ndimensional-arrays", "zarr"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/geozarr_examples/_version.py"

[tool.pixi.pypi-dependencies]
geozarr_examples = { path = ".", editable = true }

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test", "io", "analysis"], solve-group = "default" }

[tool.pixi.feature.io.dependencies]
netcdf4 = "*"
pooch = ">=1.8.2,<2"
rasterio = ">=1.4.3,<2"
libgdal-hdf5 = "*"

[tool.pixi.feature.analysis.dependencies]
jupyter = "*"
panel = "*"
matplotlib = "*"
cartopy = "*"
hvplot = "*"
rich = "*"
jupytext = "*"
jupyter_bokeh = "*"

[tool.pixi.feature.analysis.pypi-dependencies]
geoviews = "*"

[dependency-groups]
test = ["pytest"]
