[project]
name = "geozarr-examples"
version = "0.1.0"
description = "GeoZarr convention examples and documentation"
authors = [
    {name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "async-geotiff",
    "geozarr-toolkit",
    "jupyter",
    "obstore",
    "pyproj>=3.7.0",
    "zarr>=3.0.8",
]

[project.optional-dependencies]
docs = [
    "markdown-exec[ansi]>=1.7.0",
    "mkdocs>=1.5.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
dev = [
    "ruff",
]
license = {text = "MIT License"}
keywords = ["Python", "geospatial", "zarr", "geozarr", "conventions"]

[tool.ruff]
line-length = 100
force-exclude = true
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    "docs",
]

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "FA",   # flake8-future-annotations
    "I",    # isort
    "PERF", # Perflint
    "PT",   # flake8-pytest-style
    "RUF",
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

ignore = [
    "ANN001",  # Missing type annotation for function argument
    "ANN401",  # Dynamically typed Any
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["zarr.*", "xarray.*", "rioxarray.*", "cf_xarray.*", "dask.*", "pyproj.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
