[project]
name = "geozarr-examples"
version = "0.1.0"
description = "GeoZarr convention examples and documentation"
authors = [
    {name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "async-geotiff",
    "geozarr-toolkit",
    "jupyter",
    "obstore",
    "pyproj>=3.7.0",
    "zarr>=3.0.8",
]
license = {text = "MIT License"}
keywords = ["Python", "geospatial", "zarr", "geozarr", "conventions"]

[project.optional-dependencies]
docs = [
    "markdown-exec[ansi]>=1.7.0",
    "mkdocs>=1.5.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
force-exclude = true
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    "docs",
]

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "FA",   # flake8-future-annotations
    "I",    # isort
    "PERF", # Perflint
    "PT",   # flake8-pytest-style
    "RUF",
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

ignore = [
    "ANN001",  # Missing type annotation for function argument
    "ANN401",  # Dynamically typed Any
]
